changes on bus and trips
