# src/routes/AdminBusRoutes.ts
@@ -1,12 +1,29 @@
 import { Router } from 'express';
 import { createBus } from '../controllers/BusController';
-import { authorizeAdmin } from '../Middlewares/AuthMiddleware';
+import { authMiddleware, authorizeAdmin } from '../Middlewares/AuthMiddleware';
+import { createTrip, getAllTrips } from '../controllers/tripController';
+
 const router = Router();
 
 router.post(
   '/buses',
+  authMiddleware,
   authorizeAdmin,
   createBus
+);
+
+router.post(
+  '/trips',
+  authMiddleware,
+  authorizeAdmin,
+  createTrip
+);
+
+router.get(
+  '/trips',
+  authMiddleware,
+  authorizeAdmin,
+  getAllTrips
 );
 
 export default router;
