# src/swagger.json
@@ -89,6 +89,11 @@
 
     "/admin/buses": {
       "post": {
+         "security": [
+      {
+        "bearerAuth": []
+      }
+    ],
         "summary": "Create a bus (Admin only)",
         "tags": ["Admin"],
         "requestBody": {
@@ -102,7 +107,9 @@
           }
         },
         "responses": {
-          "201": { "description": "Bus created successfully" }
+          "201": { "description": "Bus created successfully" },
+          "401": { "description": "Unauthorized" },
+      "403": { "description": "Forbidden" }
         }
       }
     },
@@ -188,7 +195,7 @@
                   "from": {
                     "type": "string",
                     "example": "Nyamirambo"
-                    
+
                   }
                 }
                 }
@@ -242,14 +249,14 @@
 
   "components": {
     
-        "securitySchemes": {
-      "bearerAuth": {
-        "type": "http",
-        "scheme": "bearer",
-        "bearerFormat": "JWT"
-      }
-    },
-   
+       "securitySchemes": {
+  "bearerAuth": {
+    "type": "http",
+    "scheme": "bearer",
+    "bearerFormat": "JWT"
+  }
+},
+
     "schemas": {
       "BusInput": {
         "type": "object",
